[package]
name = "node-ping"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
gethostname = "0.4.3"
reqwest = { version = "0.11.18", features = ["rustls", "serde_json", "json", "hyper-rustls", "rustls-tls"], default-features = false }
serde = { version = "1.0.177", default-features = false, features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
tokio = { version = "1.29.1", features = ["rt", "macros", "net", "sync"] }
tokio-icmp-echo = "0.4.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
